# jelly

./: .env  .env.tests  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: codeql-analysis.yml  main.yml
app/: config.py  main.py  settings.py  worker.py
app/database/: mongodb.py
app/documents/: asset.py  creator.py
app/graphql/: mutation.py  query.py
app/models/: asset.py  creator.py
app/routers/: graphql.py
app/routers/graphql/: __init__.py  mutation.py  query.py
app/schemas/: __init__.py  asset.py  creator.py
app/search_engine/: elasticsearch.py  es_utils.py  manager.py
app/services/: creator.py
app/tasks/: elasticsearch.py
app/tests/: test_smoke.py
deploy/: hpa.yaml  ingress.yaml  secrets.yaml
deploy/deployments/: elasticsearch.yaml  kibana.yaml  mongo.yaml  web.yaml
deploy/elasticsearch/: service.yaml  statefulset.yaml  statefulsets.yaml
deploy/kibana/: deployment.yaml  service.yaml
deploy/mongo/: service.yaml  statefulset.yaml
deploy/pvc/: elasticsearch.yaml  mongo.yaml
deploy/redis/: service.yaml  statefulset.yaml
deploy/web/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
deploy/worker/: deployment.yaml  hpa.yaml
scripts/: run_tests.sh
tests/: conftest.py  test_main.py  test_mutation.py  test_query.py  test_smoke.py
